# ai-workbench

./: .env.example  .gitignore  404.html  CHANGELOG.md  README.md  __directory_structure.md  index.html  pyproject.toml  search.html
.github/workflows/: deploy-docs.yml
api-reference/core-modules/: index.html
api-reference/stateless-agent/: index.html
api-reference/summarizer-agent/: index.html
api-reference/virtual-assistant-agent/: index.html
docs/: index.md
search/: search_index.json
src/apps/: virtual_assistant_chatbot.py
user-guide/getting-started/: index.html
user-guide/stateless-agent/: index.html
user-guide/summarizer-agent/: index.html
user-guide/virtual-assistant-agent/: index.html
