[project]
name = "ai-workbench"
version = "0.1.0"
description = "A reusable library of AI agents for various automation tasks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "requests",
    "google-generativeai",
    "openai",
    "anthropic",
    "huggingface_hub",
    "litellm",
    "mkdocs-dracula-theme",
    "pdfplumber",
    "gradio",
    "mkdocs",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
stateless-agent = "run_stateless_agent:main"
summarizer-agent = "run_summarize_agent:main"
virtual-assistant = "run_virtual_assistant:main"
virtual-assistant-chatbot = "apps.virtual_assistant_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "/"
